# mbxai-mcp-weather-example

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
kubernetes/: mbxai_resource.yaml
src/mbxai_mcp_weather_example/: __init__.py  config.py
src/mbxai_mcp_weather_example/api/: __init__.py  app.py  run.py
src/mbxai_mcp_weather_example/clients/: __init__.py
src/mbxai_mcp_weather_example/project/: __init__.py  weather.py
src/mbxai_mcp_weather_example/tools/: __init__.py
tests/: test_weather.py
